# LifeHelpers

./: GITHUB_UPLOAD_NOTES.txt  README.txt  _config.yml  app.js  attach_onyx_to_profiles.bat  backend.py  currency-ledger.html  dino-nerdzone.html  index.html  manifest.webmanifest  ourspace-play-to-win-hub.html  service-worker.js  squishy-cottage.html  styles.css
OurSpace/: MYSPACE_LAYOUT_UPDATE_NOTES.md  MySpace_Visual_Style_Converter.html  OurSpace.html  (+9 more)
assets/source_trees_linked_and_patched/dbt-agent-skills-main/dbt-agent-skills-main/: LICENSE  README.md  pyproject.toml
assets/source_trees_linked_and_patched/dbt-agent-skills-main/dbt-agent-skills-main/evals/: README.md
assets/source_trees_linked_and_patched/dbt-agent-skills-main/dbt-agent-skills-main/evals/tests/: test_cli.py
assets/source_trees_linked_and_patched/dbt-agent-skills-main/dbt-agent-skills-main/scripts/: README.md
assets/sources_original_unmodified/dbt-agent-skills-main/dbt-agent-skills-main/evals/: AGENTS.md  CLAUDE.md  pyproject.toml
assets/sources_original_unmodified/dbt-agent-skills-main/dbt-agent-skills-main/evals/scenarios/dbt-job-failure/: prompt.txt  scenario.md
assets/sources_original_unmodified/dbt-agent-skills-main/dbt-agent-skills-main/evals/src/skill_eval/: __init__.py  cli.py  grader.py  logging.py  models.py  reporter.py  runner.py  scaffold.py  selector.py
assets/sources_original_unmodified/dbt-agent-skills-main/dbt-agent-skills-main/evals/tests/: test_cli_commands.py  test_grader.py  test_models.py  test_reporter.py  test_runner.py  test_scaffold.py  test_selector.py
(+671 files in other folders)
